# axxonsoft_cpp_test_task

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
app/: main.cpp
include/application/: base_application.h
include/application/default_application/: default_application.h
include/cmd_line_parser/: cmd_line_parser.h
include/counter/: base_counter.h
include/counter/threaded_lines_counter/: threaded_lines_counter.h
include/exception/: general_exception.h
include/file_searcher/: base_file_searcher.h
include/file_searcher/text_files_searcher/: recursive_file_searcher.h
src/application/default_application/: default_application.cpp
src/cmd_line_parser/: cmd_line_parser.cpp
src/counter/threaded_lines_counter/: threaded_lines_counter.cpp
src/file_searcher/: base_file_searcher.cpp
src/file_searcher/text_files_searcher/: recursive_file_searcher.cpp
test/: CMakeLists.txt
test/cmd_line_parser/: cmd_line_parser_testcases.cpp
test/counter/threaded_lines_counter/: threaded_lines_counter_testcases.cpp
test/exception/: exception_testcases.cpp
test/file_searcher/text_files_searcher/: recursive_file_searcher_testcases.cpp
